# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: page_analyzer_tests.yml
page_analyzer/: app.py  get_conn.py  get_data.py  url_check.py
page_analyzer/templates/: base.html  home_page.html  urls.html  urls_id.html
tests/: test_app.py
